--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,16 @@
 {% block title %}Index{% endblock %}
 
 {% block page_content %}
-<div class="page-header">    
-    <h1>Bienvenido a Flog!</h1>
+<div class="page-header">  
+    <h1>Bienvenido al CRM de Conesa Inc.</h1>
 </div>
+<style>
+img {
+    display: block;
+    margin-left: 370px;
+    
+  }
+</style>
+<img src="/static/images/Conesa.JPG" alt="logo" class = "center">
+
 {% endblock %}
