--- a/templates/base.html
+++ b/templates/base.html
@@ -18,12 +18,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Flog</a>
+            <a class="navbar-brand" href="/">Conesa Inc.</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Inicio</a></li>
-                <li><a href="/saludar">Saludar</a></li>
+                <li><a href="/sobre">Sobre</a></li>
+                {% if 'username' in session %}
+                <li><a href="/clientes">Clientes</a></li>
+                {% endif %}
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
                 {% if 'username' in session %}
                 <li><a href="/logout">Salir</a></li>
                 {% else %}
@@ -51,3 +56,4 @@
 {% block scripts %}
 {{ super() }}
 {% endblock %}
+
