--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,9 @@
 {% block title %}Ingrese{% endblock %}
 
 {% block page_content %}
+<div class="page-header">  
+    <h1>Ingresar</h1>
+</div>
 <div class="page-header">
     {{ wtf.quick_form(formulario) }}
 </div>
