--- a/templates/registrar.html
+++ b/templates/registrar.html
@@ -5,6 +5,6 @@
 
 {% block page_content %}
 <div class="page-header">
-    {{ wtf.quick_form(form) }}
+    {{ wtf.quick_form(formulario) }}
 </div>
 {% endblock %}
