--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -8,30 +8,21 @@
 </div>
 <p>En la base existen {{ CantClientes }} clientes.</p>
 
+
 <table class="table table-striped table-bordered table-hover table-condensed">
         <thead>
           <tr class="info">
-            <th>Nombre</th>
-            <th>Edad</th>
-            <th>Dirección</th>
-            <th>País</th>
-            <th>Documento</th>
-            <th>Fecha Alta</th>
-            <th>Correo Electrónico</th>
-            <th>Trabajo</th>
+            {% for element in encabezados %}
+            <th>{{element}}</th>
+            {% endfor %}
           </tr>
         </thead>
         <tbody>
-{% for element in lista %}
+{% for element in filas %}
     <tr>
-        <td>{{ element.nombre }}</td>
-        <td>{{ element.edad }}</td>
-        <td>{{ element.direc }}</td>
-        <td>{{ element.país }}</td>
-        <td>{{ element.dni }}</td>
-        <td>{{ element.fechaAlta }}</td>
-        <td>{{ element.mail }}</td>
-        <td>{{ element.trabajo }}</td>        
+        {% for campo in element %}
+        <td>{{ campo}}</td>
+        {% endfor %}        
     </tr>
 {% endfor %}
         </tbody>
